syntax = "proto3";

package com.hmproductions.bingo.actions;

message ClickGridCellRequest {
    uint32 room_id = 1;
    uint32 player_id = 2;
    uint32 cell_clicked = 3;
}

message ClickGridCellResponse {
    enum StatusCode {
        OK = 0;
        NOT_PLAYER_TURN = 1;
        ROOM_NOT_EXIST = 2;
        INTERNAL_SERVER_ERROR = 3;
    }

    StatusCode status_code = 1;
    string status_message = 2;
}
