syntax = "proto3";

package com.hmproductions.bingo.datastreams;
option java_multiple_files = true;

import "models/GameEvent.proto";

message GameEventUpdate {
    models.GameEvent game_event = 1;
}
